cambié "habilidades principales" a "habilidades"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			    	<p>vicmiramontesmele@gmail.com</p>
 			</section>
 			<section>
-				<h4>Habilidades principales</h4>
+				<h4>Habilidades</h4>
 					<p>Adobe Illustrator: Intermedio</p>
 					<p>Adobe Indesign: Intermedio</p>
 					<p>Adobe Photoshop: Básico</p>
