--- a/index.html
+++ b/index.html
@@ -9,39 +9,62 @@
 	<header>
 		<h1>Victoria Miramontes Mele</h1>
 		<h3>Estudiante de Diseño y Comunicación Visual</h3>
-		<main>
-			<section>
-				<h4>Perfil profesional</h4>
-					<p>Soy estudiante de la Licenciatura en Diseño y Comunicación Visual. Me considero una persona proactiva, creativa, muy dedicada y resposable. Poseo buena predisposición para el trabajo en equipo. Tengo gran motivación por aprender y crecer en el ámbito profesional.</p>
-			</section>
-			<section>
-				<h4>Información personal</h4>
-					<p>20 años</p>
-					<p>Avellaneda, Buenos Aires, Argentina</p>
-			</section>
-			<section>
-				<h4>Contacto</h4>
-					<p>11 6818-4992</p>
-			    	<p>vicmiramontesmele@gmail.com</p>
-			</section>
-			<section>
-				<h4>Habilidades principales</h4>
-					<p>Adobe Illustrator: Intermedio</p>
-					<p>Adobe Indesign: Intermedio</p>
-					<p>Adobe Photoshop: Básico</p>
-					<p>Microsoft Word: Avanzado</p>
-					<p>Microsoft Power Point: Avanzado</p>
-			</section>
-			<section>
-				<h4>Formación académica</h4>
-					<p>Lic. en Diseño y Comunicación Visual. Universidad Nacional de Lanús. (2021 - 3er año en curso)</p>
-					<p>Bachiller en Lenguas. Colegio E.N.S.P.A. (2017-2020). Colegio San Patricio (2015-2016)</p>
-			</section>
-		    <section>
-				<h4>Disponibilidad horaria</h4>
-					<p>Media jornada</p>
-			</section>
-		</main>
 	</header>
+	<main>
+		<section>
+			<article>
+				<h4>Perfil profesional</h4>
+				<p>Soy estudiante de la Licenciatura en Diseño y Comunicación Visual. Me considero una persona proactiva, creativa, muy dedicada y resposable. Poseo buena predisposición para el trabajo en equipo. Tengo gran motivación por aprender y crecer en el ámbito profesional.</p>
+			</article>
+		</section>
+		<section>
+			<article>
+				<h4>Información personal</h4>
+				<ul>
+					<li>20 años</li>
+					<li>Avellaneda, Buenos Aires, Argentina</li>
+				</ul>
+			</article>
+		</section>
+		<section>
+			<article>
+				<h4>Contacto</h4>
+				<ul>
+					<li>11 6818-4992</li>
+			    	<li>vicmiramontesmele@gmail.com</li>
+				</ul>
+			</article>
+		</section>
+		<section>
+			<article>
+				<h4>Habilidades principales</h4>
+				<ul>
+					<li>Adobe Illustrator: Intermedio</li>
+					<li>Adobe Indesign: Intermedio</li>
+					<li>Adobe Photoshop: Básico</li>
+					<li>Microsoft Word: Avanzado</li>
+					<li>Microsoft Power Point: Avanzado</li>
+				</ul>
+			</article>
+		</section>
+		<section>
+			<article>
+				<h4>Formación académica</h4>
+				<ul>
+					<li>Lic. en Diseño y Comunicación Visual. Universidad Nacional de Lanús. (2021 - 3er año en curso)</li>
+					<li>Bachiller en Lenguas. Colegio E.N.S.P.A. (2017-2020). Colegio San Patricio (2015-2016)</li>
+					<li>Educación primaria. Colegio San Patricio. (2009-2014)</li>
+				</ul>
+			</article>
+		</section>
+		<section>
+			<article>
+				<h4>Disponibilidad horaria</h4>
+				<ul>
+					<li>Media jornada</li>
+				</ul>
+			</article>
+		</section>
+	</main>
 </body>
 </html>
