--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-	<header>
+	<header>	
+		<img src="img/foto CV TP1.png" width="237" height="237" alt="Fotografía de Victoria Miramontes Mele"/>
 		<h1>Victoria Miramontes Mele</h1>
 		<h3>Estudiante de Diseño y Comunicación Visual</h3>
 	</header>
@@ -26,7 +27,7 @@
 				</ul>
 			</article>
 		</section>
-		<section>
+	  <section>
 			<article>
 				<h4>Contacto</h4>
 				<ul>
@@ -34,8 +35,8 @@
 			    	<li>vicmiramontesmele@gmail.com</li>
 				</ul>
 			</article>
-		</section>
-		<section>
+	  </section>
+	  <section>
 			<article>
 				<h4>Habilidades principales</h4>
 				<ul>
@@ -46,8 +47,8 @@
 					<li>Microsoft Power Point: Avanzado</li>
 				</ul>
 			</article>
-		</section>
-		<section>
+	  </section>
+	  <section>
 			<article>
 				<h4>Formación académica</h4>
 				<ul>
@@ -56,15 +57,15 @@
 					<li>Educación primaria. Colegio San Patricio. (2009-2014)</li>
 				</ul>
 			</article>
-		</section>
-		<section>
+	  </section>
+	  <section>
 			<article>
 				<h4>Disponibilidad horaria</h4>
 				<ul>
 					<li>Media jornada</li>
 				</ul>
 			</article>
-		</section>
-	</main>
+	  </section>
+</main>
 </body>
 </html>
