--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Ejercicio 1 - Compu 3</title>
+	<link href="estilos.css" rel="stylesheet" type="text/css"> 
 </head>
 
 <body>
@@ -66,6 +67,6 @@
 				</ul>
 			</article>
 	  </section>
-</main>
+	</main>
 </body>
 </html>
