--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<h3>Estudiante de Diseño y Comunicación Visual</h3>
 	</header>
 	<main>
-		<section>
+		<section class="sec1">
 			<article>
 				<h4>Perfil profesional</h4>
 				<p>Soy estudiante de la Licenciatura en Diseño y Comunicación Visual. Me considero una persona proactiva, creativa, muy dedicada y resposable. Poseo buena predisposición para el trabajo en equipo. Tengo gran motivación por aprender y crecer en el ámbito profesional.</p>
 			</article>
 		</section>
-		<section>
+		<section class="sec2">
 			<article>
 				<h4>Información personal</h4>
 				<ul>
@@ -28,7 +28,7 @@
 				</ul>
 			</article>
 		</section>
-	  <section>
+	    <section class="sec3">
 			<article>
 				<h4>Contacto</h4>
 				<ul>
@@ -36,8 +36,8 @@
 			    	<li>vicmiramontesmele@gmail.com</li>
 				</ul>
 			</article>
-	  </section>
-	  <section>
+	    </section>
+	    <section class="sec4">
 			<article>
 				<h4>Habilidades principales</h4>
 				<ul>
@@ -48,8 +48,8 @@
 					<li>Microsoft Power Point: Avanzado</li>
 				</ul>
 			</article>
-	  </section>
-	  <section>
+	    </section>
+	    <section class="sec5">
 			<article>
 				<h4>Formación académica</h4>
 				<ul>
@@ -58,15 +58,15 @@
 					<li>Educación primaria. Colegio San Patricio. (2009-2014)</li>
 				</ul>
 			</article>
-	  </section>
-	  <section>
+		</section>
+	    <section class="sec6">
 			<article>
 				<h4>Disponibilidad horaria</h4>
 				<ul>
 					<li>Media jornada</li>
 				</ul>
 			</article>
-	  </section>
+	   </section>
 	</main>
 </body>
 </html>
