cambios idml css

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<article>
 				<h4>Contacto</h4>
 				<ul>
-					<li>11 6818-4992</li>
-			    	<li>vicmiramontesmele@gmail.com</li>
+					<li><a href="+541168184992">11 6818-4992</a></li>
+			    	<li><a href="mailto:vicmiramontesmele@gmail.com">vicmiramontesmele@gmail.com</a></li>
 				</ul>
 			</article>
 	    </section>
