--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 	<header>	
 		<img src="img/foto CV TP1.png" width="237" height="237" alt="Fotografía de Victoria Miramontes Mele"/>
+		<div>	
 		<h1>Victoria Miramontes Mele</h1>
 		<h3>Estudiante de Diseño y Comunicación Visual</h3>
+		</div>
 	</header>
 	<main>
 		<section class="sec1">
