--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 	<header>	
 		<img src="img/foto CV TP1.png" width="237" height="237" alt="Fotografía de Victoria Miramontes Mele"/>
 		<div>	
-		<h1>Victoria Miramontes Mele</h1>
-		<h3>Estudiante de Diseño y Comunicación Visual</h3>
+			<h1>Victoria Miramontes Mele</h1>
+			<h3>Estudiante de Diseño y Comunicación Visual</h3>
 		</div>
 	</header>
 	<main>
+		<div class="columna1">
 		<section class="sec1">
 			<article>
 				<h4>Perfil profesional</h4>
@@ -39,6 +40,8 @@
 				</ul>
 			</article>
 	    </section>
+		</div>
+		<div class="columna2">
 	    <section class="sec4">
 			<article>
 				<h4>Habilidades principales</h4>
@@ -69,6 +72,7 @@
 				</ul>
 			</article>
 	   </section>
+	   </div>
 	</main>
 </body>
 </html>
