--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
 			<article>
 				<h4>Formación académica</h4>
 				<ul>
-					<li>Lic. en Diseño y Comunicación Visual. Universidad Nacional de Lanús. (2021 - 3er año en curso)</li>
-					<li>Bachiller en Lenguas. Colegio E.N.S.P.A. (2017-2020). Colegio San Patricio (2015-2016)</li>
-					<li>Educación primaria. Colegio San Patricio. (2009-2014)</li>
+					<li>Lic. en Diseño y Comunicación Visual</li>
+					<p>Universidad Nacional de Lanús (2021 - 3er año en curso)</p>
+					<li>Bachiller en Lenguas</li>
+					<p>Colegio E.N.S.P.A. (2017-2020)</p>
+					<p>Colegio San Patricio (2015-2016)</p>
+					<li>Educación primaria</li>
+					<p>Colegio San Patricio (2009-2014)</p>
 				</ul>
 			</article>
 		</section>
