--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Ejercicio 1 - Compu 3</title>
+	<meta charset="utf-8">
+	<title>Ejercicio 1 - Compu 3</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css"> 
 </head>
 
@@ -11,7 +11,7 @@
 		<img src="img/foto CV TP1.png" width="237" height="237" alt="Fotografía de Victoria Miramontes Mele"/>
 		<div>	
 			<h1>Victoria Miramontes Mele</h1>
-			<h3>Estudiante de Diseño y Comunicación Visual</h3>
+			<h3>Estudiante de Dise&ntilde;o y Comunicaci&oacute;n Visual</h3>
 		</div>
 	</header>
 	<main>
@@ -19,14 +19,14 @@
 		<section class="sec1">
 			<article>
 				<h4>Perfil profesional</h4>
-				<p>Soy estudiante de la Licenciatura en Diseño y Comunicación Visual. Me considero una persona proactiva, creativa, muy dedicada y resposable. Poseo buena predisposición para el trabajo en equipo. Tengo gran motivación por aprender y crecer en el ámbito profesional.</p>
+				<p>Soy estudiante de la Licenciatura en Dise&ntilde;o y Comunicaci&oacute;n Visual. Me considero una persona proactiva, creativa, muy dedicada y resposable. Poseo buena predisposici&oacute;n para el trabajo en equipo. Tengo gran motivaci&oacute;n por aprender y crecer en el &aacute;mbito profesional.</p>
 			</article>
 		</section>
 		<section class="sec2">
 			<article>
-				<h4>Información personal</h4>
+				<h4>Informaci&oacute;n personal</h4>
 				<ul>
-					<li>20 años</li>
+					<li>20 a&ntilde;os</li>
 					<li>Avellaneda, Buenos Aires, Argentina</li>
 				</ul>
 			</article>
@@ -56,14 +56,14 @@
 	    </section>
 	    <section class="sec5">
 			<article>
-				<h4>Formación académica</h4>
+				<h4>Formaci&oacute;n acad&eacute;mica</h4>
 				<ul>
-					<li>Lic. en Diseño y Comunicación Visual</li>
-					<p>Universidad Nacional de Lanús (2021 - 3er año en curso)</p>
+					<li>Lic. en Dise&ntilde;o y Comunicaci&oacute;n Visual</li>
+					<p>Universidad Nacional de Lan&uacute;s (2021 - 3er a&ntilde;o en curso)</p>
 					<li>Bachiller en Lenguas</li>
 					<p>Colegio E.N.S.P.A. (2017-2020)</p>
 					<p>Colegio San Patricio (2015-2016)</p>
-					<li>Educación primaria</li>
+					<li>Educaci&oacute;n primaria</li>
 					<p>Colegio San Patricio (2009-2014)</p>
 				</ul>
 			</article>
@@ -78,6 +78,9 @@
 	   </section>
 	   </div>
 	</main>
+	<footer>
+		<p>Trabajo pr&aacute;ctico N°1 de Computaci&oacute;n 3</p>
+	</footer>
 	<!--¿y el footer?  🦶🏻-->
 </body>
 </html>
