--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
 	   </div>
 	</main>
 	<footer>
-		<p>Trabajo pr&aacute;ctico N°1</p>
+		<p>Trabajo pr&aacute;ctico 1</p>
 		<p>Computaci&oacute;n 3</p>
 		<p>2do cuatrimestre 2023</p>
 	</footer>
-	<!--¿y el footer?  🦶🏻-->
 </body>
 </html>
