--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<ul>
 					<li>Adobe Illustrator: Intermedio</li>
 					<li>Adobe Indesign: Intermedio</li>
-					<li>Adobe Photoshop: Básico</li>
+					<li>Adobe Photoshop: B&aacute;sico</li>
 					<li>Microsoft Word: Avanzado</li>
 					<li>Microsoft Power Point: Avanzado</li>
 				</ul>
