--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Ejercicio 1 - Compu 3</title>
+	<title>currículum-tp1-compu3</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css"> 
 </head>
 
 <body>
 	<header>	
-		<img src="img/foto CV TP1.png" width="237" height="237" alt="Fotografía de Victoria Miramontes Mele"/>
+		<img src="img/foto-cv-tp1.png" width="237" height="237" alt="Fotografía de Victoria Miramontes Mele"/>
 		<div>	
 			<h1>Victoria Miramontes Mele</h1>
 			<h3>Estudiante de Dise&ntilde;o y Comunicaci&oacute;n Visual</h3>
