--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<h3>Estudiante de Dise&ntilde;o y Comunicaci&oacute;n Visual</h3>
 		</div>
 	</header>
+	<nav>botonera</nav>
 	<main>
 		<div class="columna1">
 		<section class="sec1">
