--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 			<h3>Estudiante de Dise&ntilde;o y Comunicaci&oacute;n Visual</h3>
 		</div>
 	</header>
-	<nav>botonera</nav>
+	<nav>
+		<p><a href="+541168184992">Mis trabajos</a></p>
+		<p><a href="mailto:vicmiramontesmele@gmail.com">Contacto</a></p>
+	</nav>
 	<main>
 		<div class="columna1">
 		<section class="sec1">
