--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		</div>
 	</header>
 	<nav>
-		<p><a href="+541168184992">Mis trabajos</a></p>
-		<p><a href="mailto:vicmiramontesmele@gmail.com">Contacto</a></p>
+		<p class="mis-trabajos">Mis trabajos</p>
+		<p class="contacto">Contacto</p>
 	</nav>
 	<main>
 		<div class="columna1">
