--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</header>
 	<nav>
 		<p class="mis-trabajos">Mis trabajos</p>
-		<p class="contacto">Contacto</p>
+		<p class="contacto">Formulario de contacto</p>
 	</nav>
 	<main>
 		<div class="columna1">
