vínculo de htmls + cambios

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 		</div>
 	</header>
 	<nav>
-		<p class="mis-trabajos">Mis trabajos</p>
-		<p class="contacto">Formulario de contacto</p>
+		<ul>
+			<a class="boton-mis-trabajos" href="mis-trabajos.html" target="_self">Mis trabajos</a>
+			<a class="boton-contacto" href="formulario-de-contacto.html" target="_self">Formulario de contacto</a>
+		</ul>
 	</nav>
 	<main>
 		<div class="columna1">
@@ -39,8 +41,8 @@
 			<article>
 				<h4>Contacto</h4>
 				<ul>
-					<li><a href="+541168184992">11 6818-4992</a></li>
-			    	<li><a href="mailto:vicmiramontesmele@gmail.com">vicmiramontesmele@gmail.com</a></li>
+					<li><a class="numero-de-telefono" href="+541168184992">11 6818-4992</a></li>
+			    	<li><a class="mail" href="mailto:vicmiramontesmele@gmail.com">vicmiramontesmele@gmail.com</a></li>
 				</ul>
 			</article>
 	    </section>
