--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</div>
 	</header>
 	<nav>
-		<ul>
+		<ul class="botonera">
 			<a class="boton-mis-trabajos" href="mis-trabajos.html" target="_self">Mis trabajos</a>
 			<a class="boton-contacto" href="formulario-de-contacto.html" target="_self">Formulario de contacto</a>
 		</ul>
