--- a/formulario-de-contacto.html
+++ b/formulario-de-contacto.html
@@ -10,5 +10,11 @@
 	<header>
 		<h2>Trabajemos juntos: Formulario de contacto</h2>
 	</header>
+	<main>
+		<form method="post" action="" target="blank" enctype="text/plain">
+			<input type="text" name="Nombre/s" id="Nombre/s" placeholder="Ejemplo: Juan Pablo"> 
+			<input type="text" name="Apellido/s" id="Apellido/s" placeholder="Ejemplo: Rodriguez">
+		</form>
+	</main>
 </body>
 </html>
