--- a/mis-trabajos.html
+++ b/mis-trabajos.html
@@ -10,5 +10,10 @@
 	<header>
 		<h2>Portfolio: Mis trabajos universitarios</h2>
 	</header>
+	<footer>
+		<p>Trabajo pr&aacute;ctico 1</p>
+		<p>Computaci&oacute;n 3</p>
+		<p>2do cuatrimestre 2023</p>
+	</footer>
 </body>
 </html>
