--- a/formulario-de-contacto.html
+++ b/formulario-de-contacto.html
@@ -12,9 +12,32 @@
 	</header>
 	<main>
 		<form method="post" action="" target="blank" enctype="text/plain">
-			<input type="text" name="Nombre/s" id="Nombre/s" placeholder="Ejemplo: Juan Pablo"> 
-			<input type="text" name="Apellido/s" id="Apellido/s" placeholder="Ejemplo: Rodriguez">
+			<label for="Nombre/s">Nombre/s</label>
+			<input type="text" name="Nombre/s" id="Nombre/s" placeholder="Ejemplo: Juan Pablo" required> 
+			
+			<label for="Apellido/s">Apellido/s</label>
+			<input type="text" name="Apellido/s" id="Apellido/s" placeholder="Ejemplo: Rodriguez" required>
+			
+			<label for="Edad">Edad</label>
+			<input type="number" name="Edad" id="Edad" placeholder="Ejemplo: 25" min="18"> 
+				   
+			<label for="Correo electrónico">Correo electr&oacute;nico</label>
+			<input type="email" name="Correo electrónico" id="Correo electrónico" placeholder="Ejemplo: jp_rodriguez@gmail.com" required>
+			
+			<p class="genero">G&eacute;nero</p>
+			
+			<label>Femenino <input type="radio" name="Género" value="Femenino" id="Femenino"></label>
+			<label>Masculino <input type="radio" name="Género" value="Masculino" id="Masculino"></label>
+			<label>Otro <input type="radio" name="Género" value="Otro" id="Otro"></label>
+			
+			<input type="submit"> 
+			
 		</form>
 	</main>
+	<footer>
+		<p>Trabajo pr&aacute;ctico 1</p>
+		<p>Computaci&oacute;n 3</p>
+		<p>2do cuatrimestre 2023</p>
+	</footer>
 </body>
 </html>
