--- a/formulario-de-contacto.html
+++ b/formulario-de-contacto.html
@@ -19,16 +19,25 @@
 			<input type="text" name="Apellido/s" id="Apellido/s" placeholder="Ejemplo: Rodriguez" required>
 			
 			<label for="Edad">Edad</label>
-			<input type="number" name="Edad" id="Edad" placeholder="Ejemplo: 25" min="18"> 
+			<input type="number" name="Edad" id="Edad" placeholder="Ejemplo: 25" min="18" required> 
+			
+			<label for="País">País</label>
+			<input type="text" name="País" id="País" placeholder="Ejemplo: Argentina" required>
 				   
 			<label for="Correo electrónico">Correo electr&oacute;nico</label>
 			<input type="email" name="Correo electrónico" id="Correo electrónico" placeholder="Ejemplo: jp_rodriguez@gmail.com" required>
 			
-			<p class="genero">G&eacute;nero</p>
+			<label for="Número de teléfono">Número de teléfono</label>
+			<input type="tel" name="Número de teléfono" id="Número de teléfono" placeholder="Ejemplo: 11 6818-4992" required>
 			
+			<p class="genero">G&eacute;nero</p>
+			<div class="items-genero">
 			<label>Femenino <input type="radio" name="Género" value="Femenino" id="Femenino"></label>
 			<label>Masculino <input type="radio" name="Género" value="Masculino" id="Masculino"></label>
 			<label>Otro <input type="radio" name="Género" value="Otro" id="Otro"></label>
+			</div>
+			
+			
 			
 			<input type="submit"> 
 			
