modificaciones formulario - flexbox - porcentajes

--- a/formulario-de-contacto.html
+++ b/formulario-de-contacto.html
@@ -39,9 +39,9 @@
 
 				<p class="genero">G&eacute;nero</p>
 				<div class="items-genero">
-				<label>Femenino <input type="radio" name="Género" value="Femenino" id="Femenino"></label>
-				<label>Masculino <input type="radio" name="Género" value="Masculino" id="Masculino"></label>
-				<label>Otro <input type="radio" name="Género" value="Otro" id="Otro"></label>
+					<label><input type="radio" name="Género" value="Femenino" id="Femenino">Femenino</label>
+					<label><input type="radio" name="Género" value="Masculino" id="Masculino">Masculino</label>
+					<label><input type="radio" name="Género" value="Otro" id="Otro">Otro</label>
 				</div>
 				
 				<input class="boton-enviar" type="submit">
