--- a/mis-trabajos.html
+++ b/mis-trabajos.html
@@ -4,16 +4,28 @@
 	<meta charset="utf-8">
 	<title>mis-trabajos</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
+	<link href="css-galería/jquery.fancybox.min.css" rel="stylesheet">
 </head>
 
 <body>
 	<header>
 		<h2>Portfolio: Mis trabajos universitarios</h2>
 	</header>
+	<main>
+		<a href="image_1.jpg" data-fancybox="gallery" data-caption="Caption #1">
+			<img src="thumbnail_1.jpg" alt="" />
+		</a>
+		
+		<a href="image_2.jpg" data-fancybox="gallery" data-caption="Caption #1">
+			<img src="thumbnail_2.jpg" alt="" />
+		</a>
+	</main>
 	<footer>
 		<p>Trabajo pr&aacute;ctico 1</p>
 		<p>Computaci&oacute;n 3</p>
 		<p>2do cuatrimestre 2023</p>
 	</footer>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="js-galería/jquery.fancybox.min.js"></script>
 </body>
 </html>
