estructura galería + carpeta de imgágenes

--- a/mis-trabajos.html
+++ b/mis-trabajos.html
@@ -13,11 +13,37 @@
 	</header>
 	<main>
 		<a href="image_1.jpg" data-fancybox="gallery" data-caption="Caption #1">
-			<img src="thumbnail_1.jpg" alt="" />
+			<img src="img/galería-mis-trabajos/foto1.png" alt="TP1 - Computación 1" />
 		</a>
+		
+		<!-- Coloqué una imagen a modo de prueba. Tengo que ajustarlas todas al mismo tamaño y hacer las miniaturas. -->
 		
 		<a href="image_2.jpg" data-fancybox="gallery" data-caption="Caption #1">
 			<img src="thumbnail_2.jpg" alt="" />
+		</a>
+		
+		<a href="image_3.jpg" data-fancybox="gallery" data-caption="Caption #3">
+			<img src="thumbnail_3.jpg" alt="" />
+		</a>
+		
+		<a href="image_4.jpg" data-fancybox="gallery" data-caption="Caption #4">
+			<img src="thumbnail_4.jpg" alt="" />
+		</a>
+		
+		<a href="image_5.jpg" data-fancybox="gallery" data-caption="Caption #5">
+			<img src="thumbnail_5.jpg" alt="" />
+		</a>
+		
+		<a href="image_6.jpg" data-fancybox="gallery" data-caption="Caption #6">
+			<img src="thumbnail_6.jpg" alt="" />
+		</a>
+		
+		<a href="image_7.jpg" data-fancybox="gallery" data-caption="Caption #7">
+			<img src="thumbnail_7.jpg" alt="" />
+		</a>
+		
+		<a href="image_8.jpg" data-fancybox="gallery" data-caption="Caption #8">
+			<img src="thumbnail_8.jpg" alt="" />
 		</a>
 	</main>
 	<footer>
