enlaces a imágenes y miniaturas en la galería

--- a/mis-trabajos.html
+++ b/mis-trabajos.html
@@ -12,38 +12,36 @@
 		<h2>Portfolio: Mis trabajos universitarios</h2>
 	</header>
 	<main>
-		<a href="image_1.jpg" data-fancybox="gallery" data-caption="Caption #1">
-			<img src="img/galería-mis-trabajos/foto1.png" alt="TP1 - Computación 1" />
+		<a href="img/galería-mis-trabajos/foto1.png" data-fancybox="gallery" data-caption="Computación 1">
+			<img src="img/galería-mis-trabajos/foto1-miniatura.png" alt="Computación 1" />
 		</a>
 		
-		<!-- Coloqué una imagen a modo de prueba. Tengo que ajustarlas todas al mismo tamaño y hacer las miniaturas. -->
-		
-		<a href="image_2.jpg" data-fancybox="gallery" data-caption="Caption #1">
-			<img src="thumbnail_2.jpg" alt="" />
+		<a href="img/galería-mis-trabajos/foto2.jpg" data-fancybox="gallery" data-caption="Espacio tipografico 2">
+			<img src="img/galería-mis-trabajos/foto2-miniatura.png" alt="Espacio tipográfico 2" />
 		</a>
 		
-		<a href="image_3.jpg" data-fancybox="gallery" data-caption="Caption #3">
-			<img src="thumbnail_3.jpg" alt="" />
+		<a href="img/galería-mis-trabajos/foto3.jpg" data-fancybox="gallery" data-caption="Espacio tipográfico 2">
+			<img src="img/galería-mis-trabajos/foto3-miniatura.png" alt="Espacio tipográfico 2" />
 		</a>
 		
-		<a href="image_4.jpg" data-fancybox="gallery" data-caption="Caption #4">
-			<img src="thumbnail_4.jpg" alt="" />
+		<a href="img/galería-mis-trabajos/foto4.jpg" data-fancybox="gallery" data-caption="Espacio tipográfico 2">
+			<img src="img/galería-mis-trabajos/foto4-miniatura.png" alt="Espacio tipográfico 2" />
 		</a>
 		
-		<a href="image_5.jpg" data-fancybox="gallery" data-caption="Caption #5">
-			<img src="thumbnail_5.jpg" alt="" />
+		<a href="img/galería-mis-trabajos/foto5.jpg" data-fancybox="gallery" data-caption="Espacio tipográfico 2">
+			<img src="img/galería-mis-trabajos/foto5-miniatura.png" alt="Espacio tipográfico 2" />
 		</a>
 		
-		<a href="image_6.jpg" data-fancybox="gallery" data-caption="Caption #6">
-			<img src="thumbnail_6.jpg" alt="" />
+		<a href="img/galería-mis-trabajos/foto6.jpg" data-fancybox="gallery" data-caption="Tecnología 2">
+			<img src="img/galería-mis-trabajos/foto6-miniatura.png" alt="Tecnología 2" />
 		</a>
 		
-		<a href="image_7.jpg" data-fancybox="gallery" data-caption="Caption #7">
-			<img src="thumbnail_7.jpg" alt="" />
+		<a href="img/galería-mis-trabajos/foto7.jpg" data-fancybox="gallery" data-caption="Taller de diseño 2">
+			<img src="img/galería-mis-trabajos/foto7-miniatura.png" alt="Taller de diseño 2" />
 		</a>
 		
-		<a href="image_8.jpg" data-fancybox="gallery" data-caption="Caption #8">
-			<img src="thumbnail_8.jpg" alt="" />
+		<a href="img/galería-mis-trabajos/foto8.jpg" data-fancybox="gallery" data-caption="Taller de Diseño 2">
+			<img src="img/galería-mis-trabajos/foto8-miniatura.png" alt="Taller de diseño 2" />
 		</a>
 	</main>
 	<footer>
