--- a/mis-trabajos.html
+++ b/mis-trabajos.html
@@ -11,38 +11,47 @@
 	<header>
 		<h2>Portfolio: Mis trabajos universitarios</h2>
 	</header>
-	<main>
-		<a href="img/galería-mis-trabajos/foto1.png" data-fancybox="gallery" data-caption="Computación 1">
-			<img src="img/galería-mis-trabajos/foto1-miniatura.png" alt="Computación 1" />
-		</a>
+	<main class="galeria">
 		
-		<a href="img/galería-mis-trabajos/foto2.jpg" data-fancybox="gallery" data-caption="Espacio tipografico 2">
-			<img src="img/galería-mis-trabajos/foto2-miniatura.png" alt="Espacio tipográfico 2" />
-		</a>
+		<div class="columna1-fotos">
 		
-		<a href="img/galería-mis-trabajos/foto3.jpg" data-fancybox="gallery" data-caption="Espacio tipográfico 2">
-			<img src="img/galería-mis-trabajos/foto3-miniatura.png" alt="Espacio tipográfico 2" />
-		</a>
+			<a href="img/galería-mis-trabajos/foto1.png" data-fancybox="gallery" data-caption="Computación 1">
+				<img src="img/galería-mis-trabajos/foto1-miniatura.png" alt="Computación 1" />
+			</a>
+
+			<a href="img/galería-mis-trabajos/foto2.jpg" data-fancybox="gallery" data-caption="Espacio tipografico 2">
+				<img src="img/galería-mis-trabajos/foto2-miniatura.png" alt="Espacio tipográfico 2" />
+			</a>
+
+			<a href="img/galería-mis-trabajos/foto3.jpg" data-fancybox="gallery" data-caption="Espacio tipográfico 2">
+				<img src="img/galería-mis-trabajos/foto3-miniatura.png" alt="Espacio tipográfico 2" />
+			</a>
+
+			<a href="img/galería-mis-trabajos/foto4.jpg" data-fancybox="gallery" data-caption="Espacio tipográfico 2">
+				<img src="img/galería-mis-trabajos/foto4-miniatura.png" alt="Espacio tipográfico 2" />
+			</a>
+			
+			<a href="img/galería-mis-trabajos/foto5.jpg" data-fancybox="gallery" data-caption="Espacio tipográfico 2">
+				<img src="img/galería-mis-trabajos/foto5-miniatura.png" alt="Espacio tipográfico 2" />
+			</a>
 		
-		<a href="img/galería-mis-trabajos/foto4.jpg" data-fancybox="gallery" data-caption="Espacio tipográfico 2">
-			<img src="img/galería-mis-trabajos/foto4-miniatura.png" alt="Espacio tipográfico 2" />
-		</a>
-		
-		<a href="img/galería-mis-trabajos/foto5.jpg" data-fancybox="gallery" data-caption="Espacio tipográfico 2">
-			<img src="img/galería-mis-trabajos/foto5-miniatura.png" alt="Espacio tipográfico 2" />
-		</a>
-		
-		<a href="img/galería-mis-trabajos/foto6.jpg" data-fancybox="gallery" data-caption="Tecnología 2">
-			<img src="img/galería-mis-trabajos/foto6-miniatura.png" alt="Tecnología 2" />
-		</a>
-		
-		<a href="img/galería-mis-trabajos/foto7.jpg" data-fancybox="gallery" data-caption="Taller de diseño 2">
-			<img src="img/galería-mis-trabajos/foto7-miniatura.png" alt="Taller de diseño 2" />
-		</a>
-		
-		<a href="img/galería-mis-trabajos/foto8.jpg" data-fancybox="gallery" data-caption="Taller de Diseño 2">
-			<img src="img/galería-mis-trabajos/foto8-miniatura.png" alt="Taller de diseño 2" />
-		</a>
+		</div>
+	
+		<div class="columna2-fotos">
+
+			<a href="img/galería-mis-trabajos/foto6.jpg" data-fancybox="gallery" data-caption="Tecnología 2">
+				<img src="img/galería-mis-trabajos/foto6-miniatura.png" alt="Tecnología 2" />
+			</a>
+
+			<a href="img/galería-mis-trabajos/foto7.jpg" data-fancybox="gallery" data-caption="Taller de diseño 2">
+				<img src="img/galería-mis-trabajos/foto7-miniatura.png" alt="Taller de diseño 2" />
+			</a>
+
+			<a href="img/galería-mis-trabajos/foto8.jpg" data-fancybox="gallery" data-caption="Taller de Diseño 2">
+				<img src="img/galería-mis-trabajos/foto8-miniatura.png" alt="Taller de diseño 2" />
+			</a>
+			
+		</div>	
 	</main>
 	<footer>
 		<p>Trabajo pr&aacute;ctico 1</p>
