cambio en el nav - todos los html se abren en la misma página

--- a/formulario-de-contacto.html
+++ b/formulario-de-contacto.html
@@ -10,6 +10,12 @@
 	<header>
 		<h2>Trabajemos juntos: Formulario de contacto</h2>
 	</header>
+	<nav>
+		<ul class="botonera">
+			<div><a class="boton-inicio" href="index.html" target="_self">Inicio</a></div>
+			<div><a class="boton-mis-trabajos" href="mis-trabajos.html" target="_self">Mis trabajos</a></div>
+		</ul>
+	</nav>
 	<main>
 		<form method="post" action="mailto:vicmiramontesmele@gmail.com?subject=Formulario de contacto - Currículum" target="blank" enctype="text/plain">
 			
