--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	</header>
 	<nav>
 		<ul class="botonera">
-			<div><a class="boton-mis-trabajos" href="mis-trabajos.html" target="new">Mis trabajos</a></div>
-			<div><a class="boton-contacto" href="formulario-de-contacto.html" target="new">Formulario de contacto</a></div>
+			<div><a class="boton-mis-trabajos" href="mis-trabajos.html" target="_self">Mis trabajos</a></div>
+			<div><a class="boton-contacto" href="formulario-de-contacto.html" target="_self">Formulario de contacto</a></div>
 		</ul>
 	</nav>
 	<main>
