--- a/mis-trabajos.html
+++ b/mis-trabajos.html
@@ -11,6 +11,12 @@
 	<header>
 		<h2>Portfolio: Mis trabajos universitarios</h2>
 	</header>
+	<nav>
+		<ul class="botonera">
+			<div><a class="boton-inicio" href="index.html" target="_self">Inicio</a></div>
+			<div><a class="boton-contacto" href="formulario-de-contacto.html" target="_self">Formulario de contacto</a></div>
+		</ul>
+	</nav>
 	<main class="galeria">
 		
 		<div class="columna1-fotos">
