--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>currículum-tp1-compu3</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css"> 
 </head>
-
+<!-- Vicky fijate que en los hover te esta pasando que se agrandan por el padding que le pusiste, haciendo que se agrande el nav, cosa que no deberia pasar. Recorda repasar la consigna para ver si estas aplicando toddo lo que pedimos-->
 <body>
 	<header>	
 		<img src="img/foto-cv-tp1.png" width="237" height="237" alt="Fotografía de Victoria Miramontes Mele"/>
