--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<h3>Estudiante de Dise&ntilde;o y Comunicaci&oacute;n Visual</h3>
 		</div>
 	</header>
+	<!-- cambio de prueba -->
 	<nav>
 		<ul class="botonera">
 			<div><a class="boton-mis-trabajos" href="mis-trabajos.html" target="_self">Mis trabajos</a></div>
