prueba de DW - git

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>currículum-tp1-compu3</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css"> 
 </head>
-
+<!-- prueba -->
 <body>
 	<header>	
 		<img src="img/foto-cv-tp1.png" width="237" height="237" alt="Fotografía de Victoria Miramontes Mele"/>
@@ -14,7 +14,6 @@
 			<h3>Estudiante de Dise&ntilde;o y Comunicaci&oacute;n Visual</h3>
 		</div>
 	</header>
-	<!-- cambio de prueba -->
 	<nav>
 		<ul class="botonera">
 			<div><a class="boton-mis-trabajos" href="mis-trabajos.html" target="_self">Mis trabajos</a></div>
