--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>currículum-tp1-compu3</title>
+	<link rel="icon" type="img/png" href="img/favicon.png"> 
+	<title>curr&iacute;culum-tp1-compu3</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css"> 
 </head>
 
