--- a/mis-trabajos.html
+++ b/mis-trabajos.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="icon" type="img/png" href="img/favicon.png">
 	<title>mis-trabajos</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link href="css-galería/jquery.fancybox.min.css" rel="stylesheet">
