--- a/formulario-de-contacto.html
+++ b/formulario-de-contacto.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="img/png" href="img/favicon.png">
 	<title>formulario-de-contacto</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
