--- a/formulario-de-contacto.html
+++ b/formulario-de-contacto.html
@@ -18,7 +18,7 @@
 			<div><a class="boton-mis-trabajos" href="mis-trabajos.html" target="_self">Mis trabajos</a></div>
 		</ul>
 	</nav>
-	<main>
+	<main class="contenedor-formulario">
 		<form method="post" action="mailto:vicmiramontesmele@gmail.com?subject=Formulario de contacto - Currículum" target="blank" enctype="text/plain">
 			
 			<div class="columna1inputs">
